--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -16,3 +16,5 @@ jobs:
 
       - name: Lint Code Base
         uses: docker://github/super-linter:v3
+        env:
+            VALIDATE_ALL_CODEBASE: false
